# 2dGame-Course

./: .clang-format  .gitignore  CMakeLists.txt  game  main.cpp
src/: Animation.cpp  Animation.h  AssetManager.cpp  AssetManager.h  Collision.cpp  Collision.h  Component.h  Constants.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  FontManager.cpp  FontManager.h  Game.cpp  Game.h  Main.cpp  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h
src/Components/: ColliderComponent.h  KeyboardControlComponent.h  ProjectileEmitterComponent.h  SpriteComponent.h  TextLabelComponent.h  TileComponent.h  TransformComponent.h
